2025-04-10 fix personal big icon colours on dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ body {
 		color: #EEE;
 		background-color: black;
 	}
-	h1 img, .fa {
+	h1 img, .fa, .fas {
 		filter: invert();
 	}
 }
